阶段性提交

--- a/eggworks/eggworks-Info.plist
+++ b/eggworks/eggworks-Info.plist
@@ -21,7 +21,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.eggworks.egworks</string>
+	<string>com.caidancf.pansuan</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
